--- a/style.css
+++ b/style.css
@@ -3,28 +3,26 @@
 }
 
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
     background: #1c1e26;
-    height: 100vh;
-    max-width: 500px;
-
-    font-family: sans-serif;
     color: #fff;
+    max-width: 500px;
+    height: 100vh;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     margin: 0 auto;
+
+    font-family: sans-serif;
 }
 
 input[type="color"] {
-    border: none;
-    border-radius: 3px;
-
     width: 32.5%;
     height: 40px;
 
-    cursor: pointer;
+    border: none;
+    border-radius: 3px;
 }
 
 input[type="color"]::-webkit-color-swatch-wrapper {
@@ -40,17 +38,17 @@ a {
 }
 
 .qr-text {
-    display: block;
-    width: 100%;
-
     background: #181b29;
     color: #fff;
-    
+    width: 100%;
+
+    display: block;
+
+    margin: 0.5rem 0 1rem 0;
+    padding: 1rem;
     border: 1px solid #414866;
     border-radius: 4px;
     
-    margin: 0.5rem 0 1rem 0;
-    padding: 1rem;
     outline: none;
 }
 
@@ -60,18 +58,17 @@ a {
 }
 
 #qr-code {
+    width: 500px;
+    height: 500px;
+
     display: flex;
     justify-content: center;
     align-items: center;
 
-    height: 500px;
-    width: 500px;
-
     border: 1px solid #414866;
 }
 
-#qr-code img,
-#qr-code canvas {
+#qr-code img, #qr-code canvas {
     max-width: 100% !important;
     max-height: 100% !important;
 }
@@ -84,43 +81,34 @@ a {
 
 .sizes {
     background: #181b29;
-
     color: #fff;
-    text-align: center;
-
-    height: 40px;
     width: 32.5%;
+    height: 40px;
 
-    cursor: pointer;
-    
     border: 1px solid #414866;
     border-radius: 4px;
+    
+    text-align: center;
     outline: none;
 }
 
 .btn {
-    display: flex;
-    flex: 1;
-    align-items: center;
-    justify-content: space-between;
-
     background: rgb(106, 43, 255);
     color: #fff;
-
-    padding: 14px;
-    max-width: 230px;
-
-    border: none;
-    border-radius: 6px;
+    min-width: 200px;
     
-    cursor: pointer;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 100%;
+    
+    padding: 14px;
+    border: none;
+    border-radius: 4px;
+    
     font-size: 1.1rem;
     font-weight: 500;
-}
-
-.btn:hover {
-    background: rgb(95, 38, 228);
+    cursor: pointer;
 }
 
 .btn img {
@@ -134,6 +122,7 @@ a {
 
 .action-container {
     display: flex;
+    flex: 100%;
     justify-content: space-between;
 
     margin: 1rem 0;
@@ -150,8 +139,7 @@ a {
         height: 95vw;
     }
 
-    #qr-code img,
-    #qr-code canvas {
+    #qr-code img, #qr-code canvas {
         max-width: 95vw !important;
         max-height: 95vw !important;
     }
